# factor-research-rs

./: Cargo.toml  DETAILED_GUIDE.md  README.md  SPRINT_TODO.md
.cargo/: config.toml
configs/: sample.toml
crates/fr-backtest/: Cargo.toml
crates/fr-cli/: Cargo.toml
crates/fr-cli/src/: main.rs
crates/fr-core/: Cargo.toml
crates/fr-data/: Cargo.toml
crates/fr-execution/: Cargo.toml
crates/fr-factors/: Cargo.toml
crates/fr-io/: Cargo.toml
crates/fr-portfolio/: Cargo.toml
crates/fr-stats/: Cargo.toml
